Added some content

--- a/docs/source/READING/content.ipynb
+++ b/docs/source/READING/content.ipynb
@@ -2,30 +2,133 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b906cece",
+   "id": "61c651bb",
    "metadata": {},
    "source": [
     "# RELEVANT READING"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "cc3fc7af",
+   "id": "609bbce9",
    "metadata": {},
    "source": [
-    "## Kind 1\n",
-    "* this\n",
-    "* that\n",
+    "Researchers at all career levels need to engage in substantial self-study. Formal classes/workshops on topics are wonderful ways to learn (likely preferred, in my opinion), but these options are not always available or viable on a timescale that meets your needs. \n",
+    "I frequently get asked *\"how much time should I be reading/studying compared to \\<insert alternative activity here\\>?\"* You should not view dedicated reading/study as a waste of time if it is something that you really need to know. In fact, a good grasp of fundamental knowledge is likely to *save* you significant time in the long run, since you will have a better grasp on what you're doing. \n",
+    "What I would advise is to not let the study be aimless. Understand what you are hoping to learn and target your study around that. If you need to pick up some other background to make it happen, then do it. If you are unsure about whether learning something would be \"useful,\" then feel free to ask, and I may be able to help. \n",
     "\n",
-    "## Kind 2\n",
+    "In the following, I outline some useful resources on various topics. \n",
+    "We should have copies of most of the books listed, while others can be accessed from the library. Books for which we have copies will be denoted with a carat (^)\n",
     "\n",
-    "## Kind 3"
+    "## Molecular Simulation\n",
+    "\n",
+    "There are two \"classic\" books that are typically owned by anyone who is serious about molecular simulation:\n",
+    "* ^*Understanding Molecular Simulation* by Daan Frenkel and Berend Smit (**FS**)\n",
+    "(Recommended coverage: Ch. 1-7, 12, Appendix D, F, L; other concepts as needed)\n",
+    "* ^*Computer Simulation of Liquids* by Michael Allen and Domonic Tildesley (**AT**) \n",
+    " (Recommended coverage: most of the book, but essentials are Ch. 1-5, 12, 13; other concepts as needed)\n",
+    "\n",
+    "I recommend actually *reading* these books -- especially the first few chapters; read them and then read them again and again. Then, revisit them.  If you have a very foundation in the fundamentals of molecular simulation, you are well-equipped to undertake a vast range of computational research problems; you will also be able to understand and diagnose errors more rapidly. **AT** is a little more verbose than **FS**, which can be simultaneously beneficial and detrimental. \n",
+    "Here is a standard to which you can apsire: prior to leaving my group, you should ideally be able to scan the Table of Contents for either book and know at least *something* about everything lists. \n",
+    "\n",
+    "I also highly recommend *The Living Journal of Computational Molecular Science*, which has emerged as a very nice pedagogical and practical resource for newbies and veterans of molecular simulation. The best practices articles provide information that may be evident based on reading of **FS** or **AT** but are packaged in compact manner with allusion to other great resources. At a minimum, new members should read all of the following articles:\n",
+    "\n",
+    "* [Best Practices for Foundations in Molecular Simulations](https://www.livecomsjournal.org/article/5957-best-practices-for-foundations-in-molecular-simulations-article-v1-0)\n",
+    "* [Best Practices for Quantification of Uncertainty and Sampling Quality in Molecular Simulations](https://www.livecomsjournal.org/article/5067-best-practices-for-quantification-of-uncertainty-and-sampling-quality-in-molecular-simulations-article-v1-0)\n",
+    "* [Best Practices for Computing Transport Properties](https://www.livecomsjournal.org/article/6324-best-practices-for-computing-transport-properties-1-self-diffusivity-and-viscosity-from-equilibrium-molecular-dynamics-article-v1-0)\n",
+    "\n",
+    "**Other general resources:**\n",
+    "* ^*Molecular Modelling Methods: Principles and Applications* by Andrew Leach -- another reasonable book, but I prefer **FS** or **AT** for most graduate students. This book does have better/more substantial description of computational quantum mechanics.\n",
+    "* [Lecture notes/materials](https://sites.engineering.ucsb.edu/~shell/che210d/assignments.html) from Prof. M. Scott Shell's Course on Modern Molecular Simulation Methods\n",
+    "* ^My lecture notes/videos for CBE422: Molecular Modeling Methods\n",
+    "* ^*A Guide to Monte Carlo Simulations in Statistical Mechanics* by Landau and Binder - **FS** and **AT** cover Monte Carlo methods to an extent that is sufficient for most people in the group, but this is a more comprehensive resource that may be useful for certain projects.\n",
+    "\n",
+    "**Enhanced Sampling and Free Energy Methods:**\n",
+    "\n",
+    "Many of the molecular simulation references will provide some reasonable introduction/explanation of free energy and enhanced sampling methods. However, I would also suggest reading [this paper](https://aip.scitation.org/doi/10.1063/1.5008853) on a comprehensive software suite ([SSAGES](https://ssagesproject.github.io/)) that implements various enhanced sampling techniques for some rapid exposure and connection to other references. It is good to study the original papers for methods that you plan to use. \n",
+    "\n",
+    "**Coarse-graining Methods:**\n",
+    "\n",
+    "Students in the group may be anywhere from well versed to experts on coarse-graining methodology. Even if not able to implement or execute the methods yourself, one should understand the basic mechanics of major CG approaches. If you are going to be using a CG method, it is important that you thoroughly read the keystone papers on the subject.\n",
+    "To get your bearings in the field of coarse-graining and multiscale simulation methods, I can suggest reading our review article on [Chemically specific coarse-graining of polymers: Methods and prospects](https://onlinelibrary.wiley.com/doi/full/10.1002/pol.20210555). This should give you a good initial presentation such that you can more confidently engage in older and newer literature. Another nice educational resource would be the [VOTCA documentation](https://www.votca.org/csg/introduction.html).\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Statistical Mechanics\n",
+    "\n",
+    "If you can take a course dedicate toward statistical thermodynamics in your first year, then I think you should do it.\n",
+    "The graduate CBE thermo class should provide some exposure, but realistically, not as much as I would like. \n",
+    "The basis of a large number of calculations/analysis from our simulations derive from the framework of statistical thermodynamics -- you *must* understand that connection. Therefore, you need a firm grasp of how different simulation algorithms relate to concepts in statistical mechanics.\n",
+    "Here are some good potential references:\n",
+    "\n",
+    "* ^*Statistical Mechanics: A Concise Introduction for Chemists* by Widom - good, brief introduction into stat mech. This is an appropriate place to start if someone received relatively little exposure during undergraduate preparation. <180 pages in total.\n",
+    "* ^*Thermodynamics and Statistical Mechanics* by Shell - gentle and integrative exposure to stat mech along with classical thermodynamics. This is the book that has been  used in grad thermo.\n",
+    "* ^*Statistcal Mechanics: Theory and Molecular Simulation* by Tuckerman - a terribic book that presents theoretical underpinnings of a variety of common simulation methods. \n",
+    "* ^*Statistical Mechanics* by McQuarrie - probably my go-to reference. It can be a bit of a slog, but the essential elements that we consistently rely on are mostly clear.\n",
+    "* ^*Introduction to Modern Statistical Mechanics* by Chandler - another good book. It is often characterized a book that is best for people who already know stat mech. \n",
+    "* *An Introduction to Statistical Thermodynamics* by Hill - comprehensive Dover (cheap!) book \n",
+    "* *Theory of Simple Liquids: with Applications to Soft Matter* by Hansen and McDonald - comprehensive coverage classical liquids with specific discussion on simulation methods \n",
+    "* ^*Molecular Driving Forces* by Dill and Bromberg - expansive but digestible text, nice for some selected topics\n",
+    "* *Nonequilibrium Statistical Mechanics* by Zwanzig - more detailed introduction and coverage on topics like fluctuation-dissipation, linear response, projection operators etc., which may be introduced in more limited or cursory fashion in prior texts. Nice appendices.\n",
+    " \n",
+    "\n",
+    "## Polymer Physics/Soft Matter\n",
+    "\n",
+    "Because of the problems that we typically target, it is generally beneficial to have some basic understanding of polymer physics. Depending on what you are doing, it may be critical. Importantly, we need to share a common vernacular. I personally would not characterize myself as a polymer physicist; I am a guy that knows some polymer physics. As with stat mech, and if warranted by your project, taking a dedicated course can be worth the time. In either case, the following are recommended:\n",
+    "\n",
+    "* ^*Polymer Physics* by Rubinstein and Colby - start here. This is easy-to-read and provides most exposure that you need\n",
+    "* ^*The Theory of Polymer Dynamics* by Doi and Edwards\n",
+    "* *Statistical Mechanics of Chain Molecules* by Flory\n",
+    "* *The Structure and Rehology of Complex Fluids* by Larson\n",
+    "* The CROW [polymerdatabase](http://polymerdatabase.com/polymer%20physics/pp%20index.html) has nice pages on a range of topics (e.g., the [rotationa isomeric state model](http://polymerdatabase.com/polymer%20physics/RIS.html#:~:text=In%20the%20so%20called%20rotational,minima%20of%20the%20rotational%20configuations.) that I bring up at least once during a Ph.D)\n",
+    "\n",
+    "## Machine Learning/Data Science\n",
+    "\n",
+    "Increasingly we are employing machine learning as either an integral or complementary tool in our work. Some folks are definitely staying \"out of the game,\" but to be fluent in group culture, you'll need to know some basics. You can probably figure out what you need to know with a bit of basic reading and then paying mindful attention to others and asking questions. \n",
+    "A lot of times the algorithms can be fancy and complicated, but the concepts are simple.\n",
+    "\n",
+    "If machine learning is going to be a major component of your research, then formal and targeted introduction through coursework in your early years is encouraged. \n",
+    "That being said, self-study can also be very effective because there are many free educational resources on the topic.\n",
+    "To start, I recommend reading any reasonable introduction book.\n",
+    "This will give you a basis to comprehend essential vernacular and algorithms that enable to you learn about more advanced topics. \n",
+    "\n",
+    "Here are some useful resources:\n",
+    "\n",
+    "* ^*Deep Learning with Python* by Chollet -- Book from the creator of Keras. Simple, practical, and quick read.\n",
+    "* *Python Machine Learning* by Rashka and Mirjalili -- I think an earlier version of this book is the first one that I read. \n",
+    "* ^*Data-Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control* -- This is a newer book that provides a pretty good exposure to some topics, but the level of depth varies by topic. It is complemented by their freely available online lectures and github code, which is nice.\n",
+    "* *[Deep Learning for Molecules and Materials](https://dmol.pub/)* by Andrew White -- pretty much the best first game in town for introduction to machine learning in the context of chemistry and materials science. New topics are added periodically to maintain technical relevance. Definitely consult this book.\n",
+    "* *[Mathematics for Machine Learning](https://mml-book.github.io/) by Deisenroth, Faisal, and Ong - very nice coverage/review of important mathematical concepts.\n",
+    "* *Deep Learning* by Goodfellow, Bengio, and Courville\n",
+    "* *[Gaussian Processes for Machine Learning](https://gaussianprocess.org/gpml/) by Rasmussen and Williams - surprisingly digestible and understandable theory of Gaussian Processes\n",
+    "\n",
+    "Then, I also highly recommend checking out these articles:\n",
+    "\n",
+    "* *\"[Taking the Human Out of the Loop: A Review of Bayesian Optimization](https://ieeexplore.ieee.org/document/7352306/)\"* by Swersky et al. - very useful article discussing Bayesian optimization, acquisition functions and the like, which are important for a lot of our applications \n",
+    "* *\"[Best practices in machine learning for chemistry](https://doi.org/10.1038/s41557-021-00716-z)\"* by Artrith et al. - title says it \n",
+    "* *\"[Machine Learning for Materials Scientists: An Introductory Guide toward Best Practices](https://pubs.acs.org/doi/10.1021/acs.chemmater.0c01907)\"* by Wang et al. - title says it\n",
+    "* *\"[Physics-Inspired Structural Representations for Molecules and Materials](https://pubs.acs.org/doi/10.1021/acs.chemrev.1c00021)\"* by Musil et al. - title says it\n",
+    "\n",
+    "Finally, you should not underrate the plethora of excellent articles and tutorials put together by true heroes  on \n",
+    "* [Towards Data Science](https://towardsdatascience.com/)\n",
+    "* [Machine Learning Mastery](https://machinelearningmastery.com/)\n",
+    "\n",
+    "## Quantum Chemistry\n",
+    "\n",
+    "Disclosure: I am not an expert in quantum chemistry (QC) or electronic structure theory. Nonetheless, elements of quantum chemistry do enter into our research. For one thing, it is essential that you understand the relationships amongst the hierarchies of methods that we encounter. If you do not know the term \"Born-Oppenheimer Potential Energy Surface'' and how that relates to a classical force field, then you need to brush up on some quantum. In addition, we may pursue some QC calculations from time-to-time. The most common instances are when parameterizing force fields or using QC for machine learning tasks. Some familiarity will also be necessary to understand and interaction with relelvant literature. The following books may be of interest:\n",
+    "\n",
+    "* ^*Molecular Modelling Methods: Principles and Applications* by Andrew Leach -- this was listed earlier already with the allusion to its QC content.\n",
+    "* ^*Introduction to Computational Physical Chemistry* by Joshua Schrier -- lovely pedagogical introduction to computational chemistry overall, but I think the quantum parts are particularly well done (especially Huckel theory)\n",
+    "* ^*Modern Quantum Chemistry: Introduction to Advanced Electronic Structure Theory* by Szabo and Ostlund - another cheap Dover book. I believe it is a staple for electronic strucure theorists. \n",
+    "\n",
+    "For more basic exposure, you could also consult an undergraduate QC textbook. I thought *Introduction to Quantum Mechanics* by Griffiths was particularly clear and ^*Quantum Chemistry* by McQuarrie is solid. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d18126",
+   "id": "747c3ac9",
    "metadata": {},
    "outputs": [],
    "source": []
