--- a/docs/source/COMPUTING/content.ipynb
+++ b/docs/source/COMPUTING/content.ipynb
@@ -5,11 +5,10 @@
    "id": "a8ac5d64",
    "metadata": {},
    "source": [
-    "# Computing Resources"
+    "# COMPUTING RESOURCES"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "146f0df8",
    "metadata": {},
